@@ -2,7 +2,7 @@ Source: jhead
 Section: graphics
 Priority: optional
 Maintainer: Ludovic Rousseau <rousseau@debian.org>
-Build-Depends: debhelper (>> 4.0.0)
+Build-Depends: debhelper (>> 4.0.0), quilt
 Standards-Version: 3.7.3
 Homepage: http://www.sentex.net/~mwandel/jhead/
 
