@@ -2,8 +2,9 @@ jhead (2.86-2) unstable; urgency=low
 
   * debian/patches/20_jhead.1: Closes: #515659
     "jhead: Manpage error in '-te' example"
+  * use quilt again
 
- -- Ludovic Rousseau <rousseau@debian.org>  Wed, 18 Feb 2009 16:52:45 +0100
+ -- Ludovic Rousseau <rousseau@debian.org>  Wed, 18 Feb 2009 15:55:26 +0000
 
 jhead (2.86-1) unstable; urgency=low
 
